--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,9 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1510.894682329829!2d-73.95980764182954!3d40.76665729483151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258c1f60c8715%3A0x2eaf6dbf0713dd00!2s315+E+69th+St%2C+New+York%2C+NY+10021!5e0!3m2!1sen!2sus!4v1559187427181!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   
   <form action="#" method="post">
-    <label>Name</label>
-    <input
+    <label for="fullname">Name</label>
+    <input type="text" name="fullname" placehold="your name" required>
+    
   </form>
 </body>
 </html>
