--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
   <form action="#" method="post">
     <label for="fullname">Name</label>
     <input type="text" name="fullname" placehold="your name" required>
-    
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
   </form>
 </body>
 </html>
