--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <input type="text" name="fullname" placehold="your name" required>
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for="phone">Phone</label>
   </form>
 </body>
 </html>
